<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com</groupId>
  <artifactId>BDDFramework</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>BDDFramework</name>
  <url>http://maven.apache.org</url>

  <properties>
       
        <surefire.fork.count>2</surefire.fork.count>
    </properties>

<build>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>  

			<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
  <version>2.4.2</version>

 <executions>

 <execution>
<configuration>                           
 <forkCount>${surefire.fork.count}</forkCount>
                           
                            <reuseForks>false</reuseForks>
                            <argLine>-Duser.language=en</argLine>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=256m</argLine>
                            <argLine>-Dfile.encoding=UTF-8</argLine>
                            <useFile>false</useFile>
                            <includes>
                                <include>**/RunnerTest*.java</include>
                               
                            </includes>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </execution>
                </executions>
 </plugin>
		</plugins>
	</build>
 <dependencies>

		<dependency>

			<groupId>info.cukes</groupId>

			<artifactId>cucumber-java</artifactId>

			<version>1.2.4</version>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>info.cukes</groupId>

			<artifactId>cucumber-junit</artifactId>

			<version>1.2.4</version>

			<scope>test</scope>

		</dependency>


		<dependency>

			<groupId>junit</groupId>

			<artifactId>junit</artifactId>

			<version>4.11</version>

			<scope>test</scope>

		</dependency>

		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>cucumber-extentsreport</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>2.53.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.53.0</version>
		</dependency>
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.2gis.winium</groupId>
			<artifactId>winium-elements-desktop</artifactId>
			<version>0.1.0-1</version>
		</dependency>

		<dependency>
			<groupId>com.github.2gis.winium</groupId>
			<artifactId>winium-webdriver</artifactId>
			<version>0.1.0-1</version>
		</dependency>

    <dependency>
    <groupId>javax.activation</groupId>
    <artifactId>activation</artifactId>
    <version>1.1.1</version>
</dependency>
<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
<dependency>
    <groupId>javax.mail</groupId>
    <artifactId>mail</artifactId>
    <version>1.4.7</version>
</dependency>


	</dependencies>
</project>
